
Note: over its 35+ year history, cdecl has never had good version numbering.
For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 18.4

** Placemarker for empty macro argument
Macros that can take a single argument can also accept no arguments since it's
interpreted as an argument of a placemarker, e.g.:

    cdecl> #define M1(A)    [A]
    cdecl> expand M1()
    M1() => [A]
    | A =>
    M1() => []

is correct.


* Changes in Cdecl 18.3

** `no` option autocompletion
Since the "no" options are of the form `nofoo` and not `no-foo`, if the user
types:

    cdecl> set no-<tab>

i.e., includes '-', it's changed to just "no" so **cdecl** will still present
all the "no" options.

** Dynamic `__FILE__` & `__LINE__` macros.
The value of `__FILE__` is now the current input file, if any, or `stdin`.  The
value of `__LINE__` is the line numer within that file, if any.

** `language` option
The `lang` option has been replaced by `language` to match the `--language`
command-line option.

** Fixed `set` _lang_
Giving a value for a language for the `set` command is now correctly forbidden,
e.g.:

    cdecl> set c=x
                 ^
    7: error: "x": set option "c" takes no value

** `##` whitespace
Fixed incorrect deletion of whitespace when concatenating tokens in some cases.

** `__VA_ARGS__` as `##` argument
`__VA_ARGS__` as a `##` argument is now correctly not further expanded, e.g.:

    cdecl> #define XPASTE(...)  x ## __VA_ARGS__
    cdecl> expand XPASTE(__LINE__)
    ...
    XPASTE(__LINE__) => x__LINE__

** `__VA_OPT__` expanding to nothing
When `__VA_OPT__` expands to nothing, it needs to expand into a placemarker.

** `__VA_OPT__` whitespace