@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "August 15, 2024" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "September 1, 2024" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -973,6 +973,11 @@ explicit object parameters,
 \f(CWstatic operator()\fP,
 and
 zero or more parameters for \f(CWoperator[]\fP.
+.TP
+.B C++26
+Use the C++26 version of the C++ language.
+Adds support for
+.RI \f(CW=\~delete("\fP reason \f(CW")\fP.
 .SH CDECL LANGUAGE
 .SS Commands
 In what follows,
