@@ -101,11 +101,11 @@ cdecl: --help/-h can be given only by itself
 cdecl: --help/-h can be given only by itself
 cdecl: "--language/-x" requires an argument
 cdecl: 'X': invalid option; use --help or -h for help
-cdecl: "X": invalid value for --language/-x; must be C, K&RC, C89, C95, C99, C11, C17, C23, C++, C++98, C++03, C++11, C++14, C++17, C++20, C++23
-cdecl: "X": invalid value for --language/-x; must be C, K&RC, C89, C95, C99, C11, C17, C23, C++, C++98, C++03, C++11, C++14, C++17, C++20, C++23
+cdecl: "X": invalid value for --language/-x; must be C, K&RC, C89, C95, C99, C11, C17, C23, C++, C++98, C++03, C++11, C++14, C++17, C++20, C++23, C++26
+cdecl: "X": invalid value for --language/-x; must be C, K&RC, C89, C95, C99, C11, C17, C23, C++, C++98, C++03, C++11, C++14, C++17, C++20, C++23, C++26
 cdecl: "--output/-o" requires an argument
 cdecl: "--output/-o" requires an argument
-cdecl: "o": invalid value for --language/-x; must be C, K&RC, C89, C95, C99, C11, C17, C23, C++, C++98, C++03, C++11, C++14, C++17, C++20, C++23
+cdecl: "o": invalid value for --language/-x; must be C, K&RC, C89, C95, C99, C11, C17, C23, C++, C++98, C++03, C++11, C++14, C++17, C++20, C++23, C++26
 cdecl: "--west-decl/-w" requires an argument
 cdecl: "--west-decl/-w" requires an argument
 cdecl: "X": invalid value for --west-decl/-w; must be [bflost]+|*|-
